
[project]
name = "agent"
version = "0.0.1"
description = "A project for exploring LangChain, LangGraph, and other AI tools"
requires-python = ">=3.10"
authors = [
    { name = "Willian Fu-Hinthorn", email = "your.email@example.com" }
]
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent","agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent"="src/agent"
"agent"="src/agent"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
